redome-discovery/dev-deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: redome-discovery-svc
 namespace: develop
spec:
 type: NodePort
 selector:
   app: redome-discovery-dev
   namespace: develop
 ports:
  - protocol: TCP
    port: 9082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-discovery-dev-deployment
  namespace: develop
  labels:
    node: worker01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-discovery-dev      
      namespace: develop
      node: worker01
  template:
    metadata:
      labels:
        app: redome-discovery-dev
        namespace: develop
        node: worker01
    spec:
      hostname: redome-discovery
      subdomain: redome-discovery-svc
      containers:
      - name: redome-discovery
        image: us.icr.io/dev_modred/redome_discovery:15-20201016173628
        resources:
          requests:
            cpu: "100m"
            memory: "768Mi"
          limits:
            memory: "1536Mi"
        volumeMounts:
          - mountPath: "/logs"
            name: apilog
      imagePullSecrets:
      - name: ibmcloudregcred
      nodeSelector:
        name: worker01
      volumes:
        - name: apilog
          persistentVolumeClaim:
            claimName: mypvc
