redome-discovery/dev1-deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: redome-discovery-svc1
 namespace: develop
spec:
 type: NodePort
 selector:
   app: redome-discovery-dev1
   namespace: develop
 ports:
  - protocol: TCP
    port: 9082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-discovery-dev1-deployment
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-discovery-dev1
      namespace: develop
  template:
    metadata:
      labels:
        app: redome-discovery-dev1
        namespace: develop
    spec:
      hostname: redome-discovery-dev1
      subdomain: redome-discovery-svc1
      containers:
      - name: redome-discovery
        image: us.icr.io/dev_modred/redome_discovery:12-20200730120505
        resources:
          requests:
            cpu: "100m"
            memory: "768Mi"
          limits:
            memory: "1536Mi"        
      imagePullSecrets:
      - name: ibmcloudregcred
      nodeSelector:
        name: worker02
