redome-discovery/hml-deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: redome-discovery-svc
 namespace: hml
spec:
 type: NodePort
 selector:
   app: redome-discovery-hml
   namespace: hml
 ports:
  - protocol: TCP
    port: 9082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-discovery-hml-deployment
  namespace: hml
  labels:
    node: worker01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-discovery-hml      
      namespace: hml      
  template:
    metadata:
      labels:
        app: redome-discovery-hml
        namespace: hml        
    spec:
      hostname: redome-discovery
      subdomain: redome-discovery-svc
      containers:
      - name: redome-discovery
        image: us.icr.io/dev_modred/redome_discovery:15-20201016173628
        resources:
          requests:
            cpu: "1m"
            memory: "768Mi"
          limits:
            memory: "1536Mi"
        volumeMounts:
          - mountPath: "/logs"
            name: apilog            
      volumes:
        - name: apilog
          persistentVolumeClaim:
            claimName: inca-pvc
