redome-discovery/hml1-deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: redome-discovery-svc1
 namespace: hml
spec:
 type: NodePort
 selector:
   app: redome-discovery-hml1
   namespace: hml
 ports:
  - protocol: TCP
    port: 9082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-discovery-hml1-deployment
  namespace: hml  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-discovery-hml1      
      namespace: hml      
  template:
    metadata:
      labels:
        app: redome-discovery-hml1
        namespace: hml        
    spec:
      hostname: redome-discovery-hml1
      subdomain: redome-discovery-svc1
      containers:
      - name: redome-discovery
        image: us.icr.io/dev_modred/redome_discovery:15-20201016173628
        resources:
          requests:
            cpu: "1m"
            memory: "768Mi"
          limits:
            memory: "1536Mi"
        volumeMounts:
          - mountPath: "/logs"
            name: apilog            
      volumes:
        - name: apilog
          persistentVolumeClaim:
            claimName: inca-pvc
