redome-discovery/local-deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: redome-discovery-svc
 namespace: develop
spec:
 type: NodePort
 selector:
   app: redome-discovery-dev
   namespace: develop
 ports:
  - protocol: TCP
    port: 9082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-discovery-dev-deployment
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-discovery-dev
      namespace: develop
  template:
    metadata:
      labels:
        app: redome-discovery-dev
        namespace: develop
    spec:
      hostname: redome-discovery
      subdomain: redome-discovery-svc
      containers:
      - name: redome-discovery
        image: localhost:32000/redome_discovery
