redome-discovery/dev-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-redome-discovery-ingress
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev-redome-discovery.cancer.org.br
    secretName: dev-redome-discovery-tls
  rules:
  - host: dev-redome-discovery.cancer.org.br
    http:
      paths:
      - path: /
        backend:
          serviceName: redome-discovery-svc
          servicePort: 9082
